feat: implement cfg parser and loader

--- a/demo/demo.cfg
+++ b/demo/demo.cfg
@@ -17,10 +17,9 @@ asset.3.filename=assets/characters/Hormelz/2hIdle/GreatSwordKnight_2hIdle5_dir8.
 asset.3.pos=0,0
 asset.3.dim=512,512
 
-
 [Map]
-grid.width=20 axioms
-grid.height=20 axioms
+grid.width=20
+grid.height=20
 tile.width=128
 tile.height=64
 
@@ -28,17 +27,14 @@ tile.height=64
 entity.1.shortcut=P
 entity.1.type=PLAYER
 entity.1.asset=3
-entity.1.pos=0,1
 
 entity.2.shortcut=N
 entity.2.type=NPC
-entity.2.asset=?
-entity.2.pos=2,0
+entity.2.asset=3
 
-entity.1.shortcut=F
-entity.1.type=FOLLOW
-entity.1.asset=3
-entity.1.pos=0,1
+entity.3.shortcut=F
+entity.3.type=FOLLOW
+entity.3.asset=3
 
 [Map.Layout.Layer.0]
 ####################
