feat: add cfg guide + fix the map dim

--- a/demo/demo.cfg
+++ b/demo/demo.cfg
@@ -18,10 +18,8 @@ asset.3.pos=0,0
 asset.3.dim=512,512
 
 [Map]
-grid.width=20
-grid.height=20
-tile.width=128
-tile.height=64
+grid.dim=20,20
+tile.dim=128,64
 
 [Entities]
 entity.1.shortcut=P
