docs: add link to demo.cfg

--- a/guide.cfg
+++ b/guide.cfg
@@ -21,4 +21,4 @@ table of asset shortcuts (grid.dim.x by grid.dim.y)
 [Map.Layout.Layer.n] (n >= 1)
 table of entity shortcuts (grid.dim.x by grid.dim.y)
 
-
+An example of .cfg file is provided in demo directory.
