--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
 name: Build & Run tests
 
 on:
-  # if not triggered on PR - trigger manually, that was made to avoid workflow duplication
   push:
   workflow_dispatch:
 
@@ -13,7 +12,6 @@ jobs:
       - name: Checkout Project
         uses: actions/checkout@v4
         with:
-          # This line is the fix
           submodules: 'recursive'
 
       - name: Install SDL3 dependencies
@@ -26,3 +24,9 @@ jobs:
         with:
           source-dir: .
           build-dir: build
+          build-type: Release
+          args: -DBUILD_TESTS=ON
+
+      - name: Run Tests
+        run: |
+          ./build/RealEngine_tests
